--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -62,15 +62,16 @@ Before attempting to merge, I'll parse down the dataframes so we can hopefully w
 
 ## WSD Summary Vales
 
-To start, I'll make a wide df the WSD data into the COVID dataset containing: the latest (2018) data; average of each parameter over time (2001 to 2018); the average of the last 3 years of data (2016-2018 for most countries); change in each parameter over time (2001-2018). Also made one for latest date for each country since 32 are missing 2018 data, not sure which we want to use!
+To start, I'll make a wide df the WSD data into the COVID dataset containing: the latest (2018) data; average of each parameter over time (2001 to 2018); the average of the last 3 years of data (2016-2018 for most countries); change in each parameter over time (2001-2018).
 
 ``` {r}
 # 2018 values
 wsd.2018 <- wsd %>% subset(Year==max(wsd$Year)) %>% dplyr::select(-Year) #filter to last year of WSD data
 colnames(wsd.2018)[4:30] <- paste(colnames(wsd.2018)[4:30], "2018", sep = "_") #add suffix
 head(wsd.2018)
-n_unique(wsd.2018$country) 
+n_unique(wsd.2018$country) #only 109 of 141 countries have 2018 data
 ```
+Because only `r n_unique(wsd.2018$country)` of `r n_unique(wsd$country)` countries have sustainability data in 2018, I've also made a df including the latest available data from each country. However, we may not want to use it since the last data represents a wide range from `r unname(summary(wsd.latest$Year_latest)[1])` to `unname(summary(wsd.latest$Year_latest)[6])`
 
 ```{r}
 # latest data for each country
@@ -82,7 +83,7 @@ colnames(wsd.latest)[2:31] <- paste(colnames(wsd.latest)[2:31], "latest", sep = 
 table(as.factor(wsd.latest$Year_latest)) # see yr frequencies
 ```
 
-Values averaged across 2016-2018; only includes countries with da. 
+Values averaged across 2016-2018; only includes countries with data from all 3 years. 
 
 ```{r}
 # 3-yr averages for numeric
@@ -120,7 +121,8 @@ wsd.3yr <- merge(wsd.3yr.fac, wsd.3yr.num, by="country") %>% #rejoin num and fac
     dplyr::select(-Year_3yr, -nYears_3yr)
 nrow(wsd.3yr)
 ```
-Averaging across all years for every country with available data. 
+
+Averaging across all years for every country with available data.  **add table/graph to show how many years each country has data for? or is this more of an EDA thing? Should EDA be it's own section above the Summary Values ones or should it all be presented together?**
 
 ```{r}
 # averages for numeric
@@ -162,15 +164,12 @@ As you can see from the frequency table above, only 60 countries have data for a
 # nrow(wsd.avg)
 ```
 
+Change in each factor over 10 years (2008-2018).
 
-Change in each factor over 10 years (2008-2018)
-
-```{r}
+```{r, warning = FALSE}
 # change in each parameter over 10 years
-
 # define function to get relative change
 rel.diff <- function(x) {(x - lag(x))/lag(x)} # define function to get relative change
-
 
 wsd.change.num <- wsd %>% 
   group_by(country) %>%
@@ -235,16 +234,11 @@ head(wsd.sum.wide)
 
 ## COVID Summary Values
 
-I'll attempt to make the dataframe smaller and more mergable by filtering down into summary variables, similar to WSD. Some possibilities of things we could compare between countries:
-- Date vaccinations start
-- mean daily vaccinations during first 6 months of availability
-- peak daily new deaths & date of that peak (actual date or number days from start)
-- days to binned_people_vaccinated_per_hundred >= X
-- binned_people_vaccinated_per_hundred as of March 2022
-- percent vaccines as of March 2022
+In order to come up with meaningful summary predictors and dependent variables that are compatible with our WSD, we'll next summaries our data on covid cases, deaths, and vaccinations. For our purposes in this project, we'll treat cases and deaths prior to each country's vaccine roll-out as independent variables (predictors) alongside the WSD. Vaccination data will be synthesized using PCA to create a the Vaccination Success Index (VSI), a composite score which we will use to indicate how well a country was able to vaccinate its citizens. 
+
+First, we create a dataframe with the latest COVID data from each country. Every country has some data from March 17, 2022, though some countries' last reported vaccination data was from as early as `unname(summary(last.timepoint$date.vac_last)[1])`.
 
 ```{r}
-skim(covid)
 #last day with data for each country
 last.timepoint1 <- covid %>% group_by(country) %>%
   arrange(country,date) %>%
@@ -274,24 +268,71 @@ colnames(last.timepoint)[2:43] <- paste(colnames(last.timepoint)[2:43], "last", 
 # #find date of vaccination events
 # table(covid$vaccination_events)
 # table(covid$vaccine_dose_events)
-# table(covid$binned_people_vaccinated_per_hundred)
+
+summary(last.timepoint$date.vac_last)
 ```
 
-Vaccine outcomes:
+Next, we'll calculate predictors from COVID case and death rates prior to the day each country reported starting to vaccinate. 
 
-```{r}
-# creating dfs of vaccination events - much of this is from covid_EDA.Rmd and can be removed/cleaned up once Rmds are merged!
+``` {r, warning=FALSE}
+# find the date each country reported starting to vaccinate
 vac_start_df <- covid %>%
   dplyr::select(country, date, vaccination_events) %>%
   filter(vaccination_events == "vac_start") %>%
   mutate(days.to.start_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.start_abs = as.numeric(difftime(date, "2020-12-01", units = "days"))) %>%
   rename(date.first.vac = date)
-
-# adding date of first vaccination for each country to the covid df so it can be used as a baseline later -
+# adding date of first vaccination for each country back to the covid df so it can be used as a cutoff
 vac_start_date <- vac_start_df %>% dplyr::select(country, date.first.vac)
 covid <- full_join(covid, vac_start_date, by ="country")
 
+# cases & deaths up until vaccines start - USE THIS!
+covid_prevac <- covid %>%
+  group_by(country) %>%
+  drop_na(date.first.vac) %>%
+  subset(date < date.first.vac) %>%
+  arrange(country,date) %>%
+  slice_tail(n=1) %>%
+  ungroup() %>%
+  dplyr::select("country"| contains("case") | contains("death"))
+colnames(covid_prevac)[2:19] <- paste(colnames(covid_prevac)[2:19], "prevac", sep = "_") #add suffix
+
+#peak rates up until vaccinations start - USE THIS
+covid_maxrate <- covid %>%
+  drop_na(date.first.vac) %>%
+  subset(date < date.first.vac) %>% 
+  dplyr::select("country" | contains(c("new", "daily"))) %>%
+  dplyr::select(-contains("vac")) %>% #drop vac cols
+  group_by(country) %>%
+  mutate_if(is.numeric, ~replace(., is.na(.), -1)) %>% #temporarily replace na's with -1
+  summarise_if(is.numeric, max) %>%
+  na_if(-1) %>% #set -1's back to na
+  rename(daily.new.cases.per.100 = daily_new_cases_per_hundred,
+         daily.new.deaths.per.100 = daily_new_deaths_per_hundred,
+         monthly.new.cases.per.100 = monthly_new_cases_per_hundred,
+         monthly.new.deaths.per.100 = monthly_new_deaths_per_hundred,
+         weekly.new.cases.per.100 = weekly_new_cases_per_hundred,
+         weekly.new.deaths.per.100 = weekly_new_deaths_per_hundred) #using . and _ separators to match WSD in case we want to pivot long later
+colnames(covid_maxrate)[2:13] <- paste(colnames(covid_maxrate)[2:13], "max", sep = "_") #add suffix
+```
+
+Finally we'll merge these COVID predictors into a single dataframe.
+
+```{r}
+#df for cases and deaths
+case.df_list <- list(covid_prevac, covid_maxrate)
+covid.predict <- case.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
+#skim(covid.predict)
+```
+
+
+### Computing Vaccination Success Index
+
+Since defining a country's success in administering vaccines is multifaceted, we'll construct the VSI on several summary metrics in addition to final vaccination counts. For instance, it is likely meaningful to account for how long it took each country to reach certain milestones (such as first starting to administer vaccines, administering X doses to each citizen, or vaccinating X% of the population) as well its peak rate of vaccination (the maximum rate of daily or weekly vaccinations) in determining whether a country did a "good job" in administering COVID vaccines to its populace. 
+
+**much of this is from covid_EDA.Rmd and can be removed/cleaned up once Rmds are fully merged!**
+
+```{r, warning=FALSE}
 #days until country admins 1 dose per person
 vac_1_dose <- covid %>%
   dplyr::select(country, date, vaccine_dose_events, date.first.vac) %>% #
@@ -300,7 +341,7 @@ vac_1_dose <- covid %>%
          days.to.1d_abs = as.numeric(difftime(date, "2020-12-01", units = "days")), # setting Dec 1, 2020 as vaccine baseline to compare across vaccine events
          days.to.1d_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
          ) 
-vac_1_dose[which.min(vac_1_dose$date),] #first country to get one dose per person
+  #vac_1_dose[which.min(vac_1_dose$date),] #first country to get one dose per person
 
 #days until country admins 2 doses per person
 vac_2_doses <- covid %>%
@@ -310,7 +351,7 @@ vac_2_doses <- covid %>%
          days.to.2d_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
          days.to.2d_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
          )
-vac_2_doses[which.min(vac_2_doses$date),] #first country to hit 2 doses
+  #vac_2_doses[which.min(vac_2_doses$date),] #first country to hit 2 doses
 
 #days until country reports vaccinating 10% of pop
 vac_10_df <- covid %>%
@@ -320,7 +361,7 @@ vac_10_df <- covid %>%
          days.to.10pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
          days.to.10pct_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
          )
-nrow(vac_10_df)
+  #nrow(vac_10_df)
 
 #days until country reports vaccinating 20% of pop
 vac_20_df <- covid %>%
@@ -330,7 +371,7 @@ vac_20_df <- covid %>%
          days.to.20pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
          days.to.20pct_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
          )
-nrow(vac_20_df)
+  #nrow(vac_20_df)
 
 #days until country reports vaccinating 30% of pop
 vac_30_df <- covid %>%
@@ -340,8 +381,7 @@ vac_30_df <- covid %>%
          days.to.30pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
          days.to.30pct_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
          )
-nrow(vac_30_df)
-n_unique(vac_30_df$country)
+  #nrow(vac_30_df)
 
 #days until country reports vaccinating 50% of pop
 vac_50_df <- covid %>%
@@ -351,19 +391,6 @@ vac_50_df <- covid %>%
          days.to.50pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
          days.to.50pct_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
          )
-
-# #percent of ppl w/ 1 dose of vaccine as of mar 17 2022 - redundant to last.timepoint
-# binned_vac <- covid %>%
-#   select(country, date, binned_people_vaccinated_per_hundred) %>%
-#   drop_na(binned_people_vaccinated_per_hundred) %>%
-#   group_by(country) %>%
-#   arrange(date) %>%
-#   slice_tail(n=1) %>%
-#   ungroup() %>%
-#   rename (bin.ppl.vac.per100_17mar22=binned_people_vaccinated_per_hundred)
-#summary(binned_vac$date)
-#n_unique(binned_vac$country) #no countries lost
-
 
 # mean daily rate of vaccinations per million ppl in first 6 months of each country's administration
 vac_rate <- covid %>%
@@ -386,55 +413,9 @@ vac_maxrate <- covid %>%
          daily.vac.per.mil_max = daily_vaccinations_per_million)
 ```
 
-``` {r}
-# cases & deaths up until vaccines start USE THIS!
-covid_prevac <- covid %>%
-  group_by(country) %>%
-  drop_na(date.first.vac) %>%
-  subset(date < date.first.vac) %>%
-  arrange(country,date) %>%
-  slice_tail(n=1) %>%
-  ungroup() %>%
-  dplyr::select("country"| contains("case") | contains("death"))
-colnames(covid_prevac)[2:19] <- paste(colnames(covid_prevac)[2:19], "prevac", sep = "_") #add suffix
+Now let's merge all these vaccination dfs into one dataframe so we can create a VSI to predict!
 
-
-# # cases & deaths at 1 yr after date.first.vac
-# covid_1yr <- covid %>%
-#   group_by(country) %>%
-#   drop_na(date.first.vac) %>%
-#   subset(date == (date.first.vac %m+% months(12))) %>%
-#   dplyr::select("country"| contains("case") | contains("death"))
-# colnames(covid_1yr)[2:19] <- paste(colnames(covid_1yr)[2:19], "1yr", sep = "_") #add suffix
-# #covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
-# #sum(is.na(covid_1yr$cumulative_total_cases))
-
-#peak rates up until vaccinations start - USE THIS
-covid_maxrate <- covid %>%
-  drop_na(date.first.vac) %>%
-  subset(date < date.first.vac) %>% 
-  dplyr::select("country" | contains(c("new", "daily"))) %>%
-  dplyr::select(-contains("vac")) %>% #drop vac cols
-  group_by(country) %>%
-  mutate_if(is.numeric, ~replace(., is.na(.), -1)) %>% #temporarily replace na's with -1
-  summarise_if(is.numeric, max) %>%
-  na_if(-1) %>% #set -1's back to na
-  rename(daily.new.cases.per.100 = daily_new_cases_per_hundred,
-         daily.new.deaths.per.100 = daily_new_deaths_per_hundred,
-         monthly.new.cases.per.100 = monthly_new_cases_per_hundred,
-         monthly.new.deaths.per.100 = monthly_new_deaths_per_hundred,
-         weekly.new.cases.per.100 = weekly_new_cases_per_hundred,
-         weekly.new.deaths.per.100 = weekly_new_deaths_per_hundred) #using . and _ separators to match WSD in case we want to pivot long later
-colnames(covid_maxrate)[2:13] <- paste(colnames(covid_maxrate)[2:13], "max", sep = "_") #add suffix
-
-#n_unique(covid_maxrate$country) #one country lost filtering to pre "2021-02-20"
-
-```
-
-
-Now let's merge all these vaccination dfs into one dataframe we can try to predict!
 First we'll dump all the vaccine-related stuff into one big dataframe here:
-
 ``` {r}
 #big df for vaccine info
 last.vac <- last.timepoint %>% dplyr::select("country"| contains("vacc"))#get just vaccine stuff from  last.timepoint
@@ -445,10 +426,10 @@ for (i in 1:length(vac.df_list)) {
 }
 
 vac.dump <- vac.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
-skim(vac.dump)
+#skim(vac.dump)
 ```
 
-Now we'll pair it down to keep only key variables that aren't redundant/highly correlated to run PCA on. NOTE: feel free to update/make changes to what's been kept!
+Now we'll pair it down to keep only key variables that will be meaningful in denoting a country's vaccination success. Variables were selected to be meaningful and non-redundant, and to have high completion rates. 
 
 ```{r}
 vac.sum <- vac.dump %>% dplyr::select(
@@ -458,78 +439,79 @@ vac.sum <- vac.dump %>% dplyr::select(
   daily.vac.per.mil_6moavg, #mean daily vaccinations in the first 6 months of administering
   people_vaccinated_per_hundred_last, #number of ppl vaccinated at last report (sometime in 2022)
   daily.vac.per.mil_max, #max number of vaccinations reported in a single day
+  total_vaccinations_per_hundred_last,# number of vaccine doses per hundred ppl at last report (sometime in 2022)
+  people_fully_vaccinated_per_hundred_last # number of people that received the full vaccine (typically 2 doses)
 )
 
-write.csv(vac.sum, "data/vaccination_summary.csv", row.names = FALSE)
+skim(vac.sum)
 ```
 
-
-Merging case & death dfs
-
-```{r}
-#df for cases and deaths
-last.case <- last.timepoint %>% dplyr::select("country", "date_last" | contains("case") | contains("death")) #get just cases & deaths stuff from  last.timepoint
-case.df_list <- list(covid_prevac, covid_1yr, covid_maxrate, last.case)
-case.sum.wide <- case.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
-skim(case.sum.wide)
-```
-
-Merge all COVID summary data
-
-```{r}
-covid.df_list <- list(case.sum.wide, vac.dump)
-covid.all <- covid.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
-n_unique(covid.all$country)
-skim(covid.all)
-```
-
-
-## Merge! Merge! Merge!
+Next we'll perform PCA to create a score to summarize these important vaccination metrics into a continuous rating, the VSI. 
 
 ``` {r}
-#merging WSD predictors with vaccination summary data
-vac.wsd.wide <- inner_join(vac.dump, wsd.sum.wide, by="country")
-#skim(vac.wsd.wide)
+#drop NAs before PCA
+vac.sum.pca <- na.omit(vac.sum)
+nrow(vac.sum.pca)
 
-#merging WSD predictors with cases, deaths & maxrate data
-case.wsd.wide <- inner_join(case.sum.wide, wsd.sum.wide, by="country")
-##WRITE CSV FOR MODELING##
-write.csv(case.wsd.wide, "data/case.wsd.wide-predictors.csv", row.names = FALSE)
-#skim(case.wsd.wide)
-
-#merging WSD predictors with latest COVID data (~March 17, 2022)
-mar22.wsd.wide <- inner_join(last.timepoint, wsd.sum.wide, by="country")
-#skim(mar22.wsd.wide)
-
-#merging everything!
-wsd.covid.all <- inner_join(covid.all, wsd.sum.wide, by="country")
-skim(wsd.covid.all)
+vax.pca3 <- prcomp(x = vac.sum.pca[,-1], scale. = TRUE, center = TRUE)
+vax.pca3$rotation
+summary(vax.pca3) # adding 2 more vars brings the proportion of variance of PC1 from 67 to 73%, so keeping those in here
+plot(summary(vax.pca3)$importance[2, ],  # PVE
+     ylab="PVE",
+     xlab="Number of PC's",
+     pch = 16, 
+     main="Scree Plot of PVE for Vaccination variables")
+# Following the elbow rule, the first PC1 clearly explains a sufficient amount of variance. We will thus keep the first PC. 
+vac.sum.with.VSI <- vac.sum.pca # copy the data
+vac.sum.with.VSI$VSI <- -vax.pca3$x[,1] # append the VSI (inverse signed PC1 scores), where a positive nb means a country was good at getting people vaccinated
 ```
 
-Any of the above can be recombined/merged further or pivoted long.
+PC1 explains 73% of the variance and is therefore an excellent index indicating how well a country did at vaccinating their population; we'll take the inverse so that a higher VSI indicated a . We are calling it the "Vaccination Success Index", i.e. `VSI`. 
 
-predict:
-days to vaccine access
-days from vaccine access to 50% ppl
-% ppl vaccinated at march 2022 (absolute counts and binned)
-doses administered at march 2022 (absolute counts and binned)
+Let's see how the VSI loadings are distributed across countries: 
 
+```{r}
+# numerical summary
+skim(vac.sum.with.VSI)
+# plot sorted VSI scores
+vac.sum.with.VSI %>%
+  ggplot(aes(x = reorder(country, VSI), 
+               y = VSI, fill = country)) +
+    geom_bar(show.legend = FALSE, stat = "identity") +
+    xlab("Country") +
+    ylab("VSI") + 
+    ggtitle("Vaccination Success Index score") +
+    theme_bw() +
+    theme(axis.text.x = element_text(angle = 60, hjust=1))
+ggplot(vac.sum.with.VSI, aes(x = reorder(country, -VSI), y = VSI, fill = country)) + 
+  geom_bar(stat = "identity")
+```
+
+We can see that Somalia appears to be the country with the lowest VSI, and Cuba appears to have the highest VSI. 
+
+
+## Finalizing Dataset
+
+We'll write our final dataset by joining our WSD predictors, prevax COVID case & death predictors, and VSI
+
+```{r}
+#merging WSD predictors with cases, deaths & maxrate data
+case.wsd.wide <- inner_join(covid.predict, wsd.sum.wide, by="country") #predictors only
+#skim(case.wsd.wide)
+
+#adding in VSI
+yval <- vac.sum.with.VSI %>% dplyr::select("country", "VSI")
+final.df <- inner_join(case.wsd.wide, yval,  by=("country"))
+#names(final.df)
+n_unique(final.df$country)
+
+##WRITE CSVs FOR MODELING##
+#write.csv(case.wsd.wide, "data/case.wsd.wide-predictors.csv", row.names = FALSE)
+```
 
 ## Modeling
 
 Predicting inverse signed PC1 scores (from `data/VaccinationSucessIndexData-New.csv`) using `case.wsd.wide`.
-
-```{r}
-#read in
-new.data.with.VSI <- read.csv("data/VaccinationSucessIndexData-New.csv")
-
-#adding in PC1
-yval <- new.data.with.VSI %>% dplyr::select("country", "VSI")
-df <- inner_join(case.wsd.wide, yval,  by=("country"))
-#names(df)
-n_unique(df$country)
-```
-
 Subdividing our dataset into `data.train`(60%), `data.test` (20%), and `data.val` (20%) DROP COUNTRY, CONTINENT & COUNTRY.CODE
 
 ```{r}
@@ -550,6 +532,8 @@ data.test <- as.data.frame(df[idx_test,])
 data.val <- as.data.frame(df[idx_val,])
 data.train.test <- as.data.frame(df[-idx_val,]) #for methods that don't require separate test set
 ``` 
+
+### Linear Models
 
 Building a couple linear models:
 
@@ -583,6 +567,9 @@ fit5 <- lm(VSI ~ GDP.PerCapita.Current_2018 + weekly.new.deaths.per.100_max + GD
 Anova(fit5)
 ```
 
+
+### Regsubsets
+
 Running regsubsets:
 
 ```{r}
@@ -605,6 +592,7 @@ plot(fit2, 2) #normality
 ```
 
 
+### Neural Nets
 
 Attempting neural nets:
 
@@ -704,3 +692,42 @@ fit.nn <- model %>% fit(
 
 plot(fit.nn)
 ```
+
+# Appendix
+
+## Unused Dataframes
+Stuff that we output but wasn't used for modeling - may be useful for EDA or post-hoc analyses:
+
+```{r, eval=FALSE}
+#get just cases & deaths stuff from  last.timepoint (mar 2022 covid cases and death)
+last.case <- last.timepoint %>% dplyr::select("country", "date_last" | contains("case") | contains("death")) 
+
+# cases & deaths at 1 yr after date.first.vac
+covid_1yr <- covid %>%
+  group_by(country) %>%
+  drop_na(date.first.vac) %>%
+  subset(date == (date.first.vac %m+% months(12))) %>%
+  dplyr::select("country"| contains("case") | contains("death"))
+colnames(covid_1yr)[2:19] <- paste(colnames(covid_1yr)[2:19], "1yr", sep = "_") #add suffix
+#covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
+#sum(is.na(covid_1yr$cumulative_total_cases))
+
+#merging all COVID data 
+covid.df_list <- list(covid_prevac, covid_maxrate, last.case, vac.dump, covid_1yr)
+covid.all <- covid.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
+n_unique(covid.all$country)
+skim(covid.all)
+
+#merging WSD predictors with vaccination summary data
+vac.wsd.wide <- inner_join(vac.dump, wsd.sum.wide, by="country")
+#skim(vac.wsd.wide)
+
+#merging WSD predictors with latest COVID data (~March 17, 2022)
+mar22.wsd.wide <- inner_join(last.timepoint, wsd.sum.wide, by="country")
+#skim(mar22.wsd.wide)
+
+#merging everything!
+wsd.covid.all <- inner_join(covid.all, wsd.sum.wide, by="country")
+skim(wsd.covid.all)
+```
+
